fix scrollbar on movies page

--- a/routes/movies/index.module.css
+++ b/routes/movies/index.module.css
@@ -18,6 +18,8 @@
   position: fixed;
   inset: 0;
   z-index: 1;
+  pointer-events: none;
+  -webkit-user-drag: none
 }
 
 .decos img {
